@startuml
skinparam classAttributeIconSize 0

class Document<<root>>

Document *-- XFormGraph : graph
Document *-- "0..*" XFormMacro : macros (dict)
Document *-- InputMgr : inputmgr

XFormMacro --|> XFormType
XFormMacro o-- XFormGraph : graph
XFormGraph o-- Document : doc


class XForm {
    +inputs:List<Tuple<XForm,int>>
}
note right of XForm
A node in the graph - behaviour
determined by type
end note

abstract class XFormType {
    +{static} allTypes: XFormType
}
note right of XFormType
superclass for
singletons controlling
node behaviour
end note

XFormType *-- "0..*" XFormType : allTypes

XFormGraph *-- "0..*" XForm : nodes

Document o-- "0..*" XForm : instances\n(dict of XFormType to List[XForm])

XForm o-- XFormType : type 
XForm o-- XFormGraph : graph

note right of XFormGraph
the graph
of nodes
end note

XformNormImage -up-|> XFormType
XformRect -up-|> XFormType

note right of XformNormImage
example singleton
end note
note right of XformRect
example singleton
end note

XformRect --> TabRect: creates
XformNormImage --> TabData: creates

abstract class Tab {
}

TabImage -up-|> Tab
TabRect -up-|> Tab


Tab o-- XForm:node
note right of Tab
UI controls
for XForm
end note

XForm *-- "0..*" Tab


@enduml
